# lab-06-multithreads

./: .travis.yml  CMakeLists.txt
scripts/: duplication.sh
sources/: main.cpp
